5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1836_1275.log
== TEST (2019-06-25 12:34:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

fun = int(input("digite; "))
mat = array(eval(input("digite: ")))

vet = zeros(fun,dtype=int)

for i in range(size(mat)):
	vet = vet + mat[i,0]




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 12:35:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

fun = int(input("digite; "))
mat = array(eval(input("digite: ")))

vet = zeros(fun,dtype=int)

for i in range(size(mat)):
	vet[i] = vet[i] + mat[i,0]
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 12:38:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

fun = int(input("digite; "))
mat = array(eval(input("digite: ")))
a = 
vet = zeros(fun,dtype=int)

for i in range(size(mat)):
	vet[i] = vet[i] + mat[i,0]
	
print(vet)




-- ERROR:
File "XXXX", line 6
    a = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 12:39:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

fun = int(input("digite; "))
mat = array(eval(input("digite: ")))
a = 
vet = zeros(fun,dtype=int)

for i in range(size(mat)):
	vet[i] = vet[i] + mat[i,0]
	
print(vet)




-- ERROR:
File "XXXX", line 6
    a = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 12:39:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

fun = int(input("digite; "))
mat = array(eval(input("digite: ")))

vet = zeros(fun,dtype=int)

for i in range(size(mat)):
	vet[i] = vet[i] + mat[i,0]
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:04:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(4,dtype=int)

for i in range(size(mat)):
	vet[i] = vet[i] + mat[i,0]
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:04:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(4,dtype=int)

for i in range(size(mat)):
	vet[i] = vet[i] + mat[i,j]
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:05:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(4,dtype=int)

for i in range(size(mat)):
	vet[i] = vet[i] + mat[i,]
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:02:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(4,dtype=int)

for i in range(size(mat)):
	vet[j] = vet[i] + mat[i,j]
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:38:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for i in range(size(mat)):
	for i in range(N):
		vet[i,j]=sun(mat[i,:])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:39:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(size(mat)):
	for i in range(7):
		vet[i,j]=sun(mat[i,:])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:40:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(size(mat)):
	for i in range(7):
		vet[i,j]= sum(mat[i,:])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:40:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(size(mat)):
	for i in range(7):
		vet[j]= sum(mat[i,:])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:40:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(size(mat)):
	for i in range(7):
		vet[i]= sum(mat[i,:])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:41:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(shape(mat)[1]:
	for i in range(7):
		vet[i]= sum(mat[i,:])
	
print(vet)




-- ERROR:
File "XXXX", line 8
    for j in range(shape(mat)[1]:
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:41:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(shape(mat)[1]):
	for i in range(7):
		vet[i]= sum(mat[i,:])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:43:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(shape(mat)[1]):
	for i in range(7):
		vet[j]= sum(mat[i,:])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:43:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(shape(mat)[1]):
	for i in range(7):
		vet[j] = sum(mat[i,j])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:44:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(shape(mat)[1]):
	for i in range(7):
		vet[j] = sum(mat[i,:])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:44:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(shape(mat)[1]):
	for i in range(7):
		vet[j;i] = sum(mat[i,:])
	
print(vet)




-- ERROR:
File "XXXX", line 10
    vet[j;i] = sum(mat[i,:])
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:44:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(shape(mat)[1]):
	for i in range(7):
		vet[j:i] = sum(mat[i,:])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:47:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(shape(mat)[1]):
	for i in range(7):
		vet[j:i] = sum(mat[i,:])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:49:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(shape(mat)[1]):
	for i in range(7):
		vet[j] = sum(mat[:,i])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:03:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(shape(mat)[0]):
	dias[j]= sum(mat[:,j])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:04:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[1],dtype=int)

for j in range(shape(mat)[0]):
	vet[j]= sum(mat[:,j])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:04:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[0],dtype=int)

for j in range(shape(mat)[0]):
	vet[j]= sum(mat[:,j])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:06:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[0],dtype=int)

for j in range(shape(mat)[0]):
	vet[j]= sum(mat[j,:])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:06:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[0],dtype=int)

for j in range(shape(mat)[0]):
	vet[j]= sum(mat[j,:])
	
print(vet)




-- EXECUTION TIME:
1.312
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 14:38:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[0],dtype=int)

for j in range(shape(mat)[0]):
	vet[j]= sum(mat[j,:])
	
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:21:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))

vet = zeros(shape(mat)[0],dtype=int)

for j in range(shape(mat)[0]):
	vet[j]= sum(mat[j,:])
	print(vet)
print(vet)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
